overflow issue fixed

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 body{
     margin:0;
     padding:0;
+    width:100vw;
+    height:100vh;
     max-width: 100%;
-    overflow-x: hidden;
+    overflow-x: clip;
 }
 
 .nav{
